umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_cyclopentane_envelope.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Cs
order: 2
equivalence_sets:
  - - C(0)
  - - H(1)
  - - H(2)
  - - C(3)
    - C(4)
  - - C(5)
    - C(6)
  - - H(7)
    - H(8)
  - - H(9)
    - H(10)
  - - H(11)
    - H(12)
  - - H(13)
    - H(14)
