umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_decaphosphatitanocene_dianion.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D5h
order: 20
equivalence_sets:
  - - Ti(0)
  - - P(1)
    - P(2)
    - P(3)
    - P(4)
    - P(5)
    - P(6)
    - P(7)
    - P(8)
    - P(9)
    - P(10)
