umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_dianthracene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2h
order: 8
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
  - - H(4)
    - H(5)
    - H(6)
    - H(7)
  - - C(8)
    - C(9)
    - C(10)
    - C(11)
    - C(12)
    - C(13)
    - C(14)
    - C(15)
  - - C(16)
    - C(17)
    - C(18)
    - C(19)
    - C(20)
    - C(21)
    - C(22)
    - C(23)
  - - C(24)
    - C(25)
    - C(26)
    - C(27)
    - C(28)
    - C(29)
    - C(30)
    - C(31)
  - - H(32)
    - H(33)
    - H(34)
    - H(35)
    - H(36)
    - H(37)
    - H(38)
    - H(39)
  - - H(40)
    - H(41)
    - H(42)
    - H(43)
    - H(44)
    - H(45)
    - H(46)
    - H(47)
