umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_diborane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2h
order: 8
equivalence_sets:
  - - B(0)
    - H(1)
  - - H(2)
    - B(3)
  - - H(4)
    - H(5)
    - H(6)
    - H(7)
