umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_diironnonacarbonyl.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - C(0)
    - Fe(1)
    - Fe(2)
  - - C(3)
    - C(4)
  - - O(5)
    - O(6)
    - O(7)
  - - C(8)
    - O(9)
    - C(10)
    - O(11)
    - C(12)
    - O(13)
  - - C(14)
    - O(15)
    - C(16)
    - O(17)
    - C(18)
    - O(19)
