umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_dodecaethyleneoctamine.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: O
order: 24
equivalence_sets:
  - - N(0)
    - N(1)
    - N(2)
    - N(3)
    - N(4)
    - N(5)
    - N(6)
    - N(7)
  - - C(8)
    - C(9)
    - C(10)
    - C(11)
    - C(12)
    - C(13)
    - C(14)
    - C(15)
    - C(16)
    - C(17)
    - C(18)
    - C(19)
    - C(20)
    - C(21)
    - C(22)
    - C(23)
    - C(24)
    - C(25)
    - C(26)
    - C(27)
    - C(28)
    - C(29)
    - C(30)
    - C(31)
  - - H(32)
    - H(33)
    - H(34)
    - H(35)
    - H(36)
    - H(37)
    - H(38)
    - H(39)
    - H(40)
    - H(41)
    - H(42)
    - H(43)
    - H(44)
    - H(45)
    - H(46)
    - H(47)
    - H(48)
    - H(49)
    - H(50)
    - H(51)
    - H(52)
    - H(53)
    - H(54)
    - H(55)
  - - H(56)
    - H(57)
    - H(58)
    - H(59)
    - H(60)
    - H(61)
    - H(62)
    - H(63)
    - H(64)
    - H(65)
    - H(66)
    - H(67)
    - H(68)
    - H(69)
    - H(70)
    - H(71)
    - H(72)
    - H(73)
    - H(74)
    - H(75)
    - H(76)
    - H(77)
    - H(78)
    - H(79)
